--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
                 "A hot picture?": [
                     "Object-interaction",
                     "Accessories",
-                    "Performance & Entertainment"
+                    "Special Submissive"
                 ]
             },
             level3: {
@@ -779,17 +779,17 @@
                 "Object-interaction": [
                     "I'll strip down completely, and take a pic of me sitting in a chair and smiling in a mirror selfie, hair down, with an arm loosely held behind me, my legs wide apart for you to savour what's in between.",
                     "Since you love teaching me, maybe I can take a mirror selfie with a book held up to my face, my hair down, wearing nothing but panties, and every other inch of me on display for you",
-                    "Handmade craft project with step-by-step documentation"
+                    ""
                 ],
                 "Accessories": [
                     "I'd love to send you an upper-half profile topless picture of me without my glasses, hair tied up tight, wearing eyeliner and basic makeup. I love being pretty for you!",
                     "A simple nude front profile mirror selfie, standing with a foot planted in front of the other, one hand loosely covering my pussy, wearing nothing but my college ID card. ",
-                    "Letter of appreciation and gratitude expression"
+                    "I'll put on any earrings I can find, turn my head slightly to show them to you, while clicking a mirror selfie wearing nothing but my panties, pulled down to my thighs, legs close together and one foot slightly in front of the other."
                 ],
-                "Performance & Entertainment": [
-                    "Dance routine practice with video recording",
-                    "Vocal exercises and singing performance",
-                    "Acting scene study with emotional expression"
+                "Special Submissive": [
+                    "Maybe I'll take a simple nude of me kneeling with my hair in a single braid and in front of me, my eyes lowered, a playful smile on my lips, my hands behind me even as i thrust my chest out for you?",
+                    "I'll place a palm under each boob of mine, pushing them up and presenting them to you as they should be, while standing nude, legs close together, one foot slightly in front of the other.",
+                    "I can use a handkerchief as a kind of gag over my mouth, wearing nothing but my bra as I kneel for you, hands behind me, hair down, spectacles off? I'll make sure that one strap of the bra is lowered to my shoulder, ensuring enough of my breast is on teasing display for you."
                 ]
             }
         };
