--- a/index.html
+++ b/index.html
@@ -715,8 +715,8 @@
 
         // Mind Options - Edit these as needed
         const MIND_OPTIONS = [
-            "I'm feeling submissive and eager to please today",
-            "I want to show more dedication to our dynamic", 
+            "I think I can work in an interview today. 😋",
+            "Maybe I can take you along for a trip to the shower? 🚿", 
             "I'm thinking about how to improve myself for you",
             "I need your guidance and direction right now"
         ];
