--- a/index.html
+++ b/index.html
@@ -717,8 +717,8 @@
         const MIND_OPTIONS = [
             "I think I can work in an interview today. 😋",
             "Maybe I can take you along for a trip to the shower? 🚿", 
-            "I'm thinking about how to improve myself for you",
-            "I need your guidance and direction right now"
+            "I'd love a little one-on-one video call, maybe. 💞",
+            " Can you just teach me how to dirty-talk well with you? 😙"
         ];
 
         // Drive System - 3x3x3 cascading options - Edit these as needed
