--- a/index.html
+++ b/index.html
@@ -632,10 +632,10 @@
                 <span class="tab-text">Pending Tasklist</span>
             </div>
             <div class="tab" data-tab="mind">
-                <span class="tab-text">What's on your mind</span>
+                <span class="tab-text">What's on your mind?</span>
             </div>
             <div class="tab" data-tab="drive">
-                <span class="tab-text">Drive</span>
+                <span class="tab-text">Drive?</span>
             </div>
             <div class="tab" data-tab="active">
                 <span class="tab-text">Active Tasklist</span>
