--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
         <!-- Sidebar -->
         <nav class="sidebar">
             <div class="tab active" data-tab="pending">
-                <span class="tab-text">Pending Tasklist</span>
+                <span class="tab-text">Daily Affirmations</span>
             </div>
             <div class="tab" data-tab="mind">
                 <span class="tab-text">What's on your mind?</span>
@@ -703,14 +703,10 @@
         
         // Pending Tasks - Edit these as needed
         const PENDING_TASKS = [
-            "Complete morning routine by 8 AM and send photo proof",
-            "Practice yoga or stretching for 30 minutes",
-            "Send a voice message describing your current mood",
-            "Complete assigned reading and write summary",
-            "Prepare healthy meal and document process",
-            "Practice meditation for 15 minutes minimum",
-            "Complete journaling exercise about daily gratitude",
-            "Send progress photo in requested outfit"
+          "Remember that he loves me, no matter what I do, for I am his submissive babygirl princess.",
+            "Keep up with my weekly passive task.",
+            "Keep up with whatever active tasks I have.",
+            "Remember that I can choose to do anything other than decided tasks too, or not do decided tasks, and that will be just okay.",            
         ];
 
         // Mind Options - Edit these as needed
