--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
 <body>
     <!-- Title Ribbon -->
     <header class="title-ribbon">
-        <h1 class="main-title" id="homeButton">babygirl</h1>
+        <h1 class="main-title" id="homeButton">babygirl.</h1>
         <div class="score-window">
             <span class="score-label">Average Score</span>
             <span class="score-value" id="averageScore">0</span>
