--- a/index.html
+++ b/index.html
@@ -648,8 +648,9 @@
         <!-- Content Area -->
         <main class="content-area" id="contentArea">
             <div class="intro-screen">
-                <h2>Welcome to your personal dashboard, babygirl</h2>
-                <p>Here you can track your progress, complete tasks, and stay connected. Choose a tab from the left to begin your journey of growth and submission. Your devotion and obedience are what make our connection stronger every day.</p>
+                <h2>Welcome to your personal dashboard, babygirl.</h2>
+                <p>Here you can track your progress, complete tasks, and stay connected. Choose a tab from the left to begin your journey of growth and submission. Choose to tell me what's on your mind for today, or whether you wish to explore how to drive a little on your own, or whether you'd simply just talk to me using the chatbox. Remember, all tasks you choose get added to your active tasklist, which upon completion will be marked by me. Do not forget to keep up with your passive tasks for the week, as they affect scoring for your active tasklist tasks.</p>
+                <p> Always remember, this is meant for your pleasure, and growth as my submissive. At any time if you're uncomfortable with anything, be sure to tell me. I love you: you're the best person I could ever have, and I cannot wait to see how you decide to please me. </p>
             </div>
         </main>
     </div>
