--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         }
 
         .tab.active {
-            background: var(--gradient-primary);
+            background: #8A2BE2;
             color: var(--color-background);
             font-weight: 600;
             transform: translateX(15px);
@@ -209,7 +209,7 @@
             left: -100%;
             width: 极100%;
             height: 100%;
-            background: var(--gradient-primary);
+            background: #8A2BE2;;
             transition: var(--transition-smooth);
             z-index: -1;
         }
