--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         }
 
         .done-button {
-            background: var(--gradient-primary);
+            background: #8A2BE2;;
             border: none;
             color: var(--color-background);
             padding: 10px 18px;
@@ -295,7 +295,7 @@
         }
 
         .scoring-table th {
-            background: var(--gradient-primary);
+            background: #8A2BE2;;
             color: var(--color-background);
             padding: 18px;
             font-weight: 600;
@@ -331,7 +331,7 @@
 
         .bottom-ribbon {
             height: 85px;
-            background: var(--gradient-dark);
+            background: #8A2BE2;;
             display: flex;
             align-items: center;
             justify-content: space-around;
