--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
 
         .title-ribbon {
-            background: var(--gradient-primary);
+            background: #4B0082;
             height: 80px;
             display: flex;
             align-items: center;
@@ -97,7 +97,7 @@
 
         .sidebar {
             width: 300px;
-            background: var(--gradient-dark);
+            background: #4B0082;
             padding: 25px 0;
             display: flex;
             flex-direction: column;
@@ -121,7 +121,7 @@
             top: 0;
             width: 100%;
             height: 100%;
-            background: var(--gradient-primary);
+            background: #4B0082;
             transition: var(--transition-smooth);
             z-index: -1;
         }
