--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
 
         const INTRO_TEXT = {
             title: "Welcome to your personal dashboard, babygirl",
-            description: "Here you can track your progress, complete tasks, and stay connected. Choose a tab from the left to begin your journey of growth and submission. Your devotion and obedience are what make our connection stronger every day."
+            description: "This is your secret playground—a space for you to surrender, to grow, and to delight in your submission: embrace it, in fact. Every task, every message, every moment here is for your pleasure and our connection. Let yourself be seen, adored, and guided. Show me your obedience, and let’s make every day a little more delicious, together."
         };
 
         // ==========================================
