--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
         // ==========================================
         
         const PENDING_TASKS = [
-            "Remember that he loves me, no matter what I do, for I am his submissive babygirl princess.",
+            "Remember that he loves me, no matter what I do, for I am his submissive babygirl, his personal princess.",
             "Keep up with my weekly passive task.",
             "Keep up with whatever active tasks I have.",
             "Remember that I can choose to do anything other than decided tasks too, or not do decided tasks, and that will be just okay."
@@ -824,8 +824,8 @@
         ];
 
         const INTRO_TEXT = {
-            title: "Welcome to your personal dashboard, babygirl",
-            description: "Here you can track your progress, complete tasks, and stay connected. Choose a tab from the left to begin your journey of growth and submission. Your devotion and obedience are what make our connection stronger every day."
+            title: "Welcome to your personal dashboard, babygirl.",
+            description: "This is your secret playground—a space for you to surrender, to grow, and to delight in your submission. Every task, every message, every moment here is for your pleasure and our connection. Let yourself be seen, adored, and guided. I want you to feel my presence in every word and every challenge. Show me your devotion, and let’s make every day a little more delicious, together."
         };
 
         // ==========================================
