--- a/index.html
+++ b/index.html
@@ -690,11 +690,11 @@
 
     <div class="chatbox" id="chatbox">
         <div class="chat-header">
-            <span>💬 Chat with Dom</span>
+            <span>Talk to your Dom here.</span>
             <button class="chat-close" id="chatClose">×</button>
         </div>
         <div class="chat-messages" id="chatMessages">
-            <div class="chat-message dom">Welcome, babygirl. How are you feeling today?</div>
+            <div class="chat-message dom">Welcome, my beautiful sub. How are you feeling today?</div>
         </div>
         <div class="chat-input-container">
             <input type="text" class="chat-input" id="chatInput" placeholder="Type your message...">
@@ -931,7 +931,7 @@
 
         function showPendingTasks() {
             const content = `
-                <h2 class="section-header">Some things I should never forget</h2>
+                <h2 class="section-header">Some things I should never forget!</h2>
                 ${PENDING_TASKS.map(task => `
                     <div class="task-card" onclick="handleTaskClick('${task.replace(/'/g, "\\'")}')">
                         <span style="position: relative; z-index: 1;">${task}</span>
