--- a/index.html
+++ b/index.html
@@ -723,10 +723,10 @@
         // ==========================================
         
         const PENDING_TASKS = [
-            "Remember that he loves me, no matter what I do, for I am his submissive babygirl, his personal princess.",
-            "Keep up with my weekly passive task.",
-            "Keep up with whatever active tasks I have.",
-            "Remember that I can choose to do anything other than decided tasks too, or not do decided tasks, and that will be just okay."
+            "I'll remember that he loves me, no matter what I do, for I am his submissive babygirl, his personal princess.",
+            "I am going to try to keep up with my weekly passive task.",
+            "I am going to try to keep up with whatever active tasks I have.",
+            "I'll remember that I can choose to do anything other than decided tasks too, or not do decided tasks, and that will be just okay."
         ];
 
         const MIND_OPTIONS = [
