--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
 
         function showPendingTasks() {
             const content = `
-                <h2 class="section-header">Some things I should never forget!</h2>
+                <h2 class="section-header">Some things I should never forget♥</h2>
                 ${PENDING_TASKS.map(task => `
                     <div class="task-card" onclick="handleTaskClick('${task.replace(/'/g, "\\'")}')">
                         <span style="position: relative; z-index: 1;">${task}</span>
