--- a/index.html
+++ b/index.html
@@ -650,19 +650,19 @@
     <div class="main-container">
         <nav class="sidebar">
             <div class="tab active" data-tab="pending">
-                <span class="tab-text">Daily Affirmations</span>
+                <span class="tab-text">Daily Affirmations💪🏼</span>
             </div>
             <div class="tab" data-tab="mind">
-                <span class="tab-text">What's on your mind?</span>
+                <span class="tab-text">What's on your mind?😏</span>
             </div>
             <div class="tab" data-tab="drive">
-                <span class="tab-text">Drive?</span>
+                <span class="tab-text">Drive?😈</span>
             </div>
             <div class="tab" data-tab="active">
-                <span class="tab-text">Active Tasklist</span>
+                <span class="tab-text">Active Tasklist☑</span>
             </div>
             <div class="tab" data-tab="scoring">
-                <span class="tab-text">Scoring</span>
+                <span class="tab-text">Scoring📑</span>
             </极div>
         </nav>
 
