--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>babygirl.</title>
+    <link rel="icon" type="image/png" href="image.png">
     <style>
         :root {
             --color-primary: #E6E6FA;
